# test-l0-rs

./: Cargo.toml  LICENSE  README.md  build.rs  compiler-shader.sh  matrixMultiply.spv
.github/workflows/: rust.yml
cpp/: bindings.rs  l0_wrapper.h
shader/: Cargo.toml  compiler-shader.sh
shader/src/: matrixMultiply.cl  matrixMultiply.spv
src/: main.rs
